# degree_mapper

./: .env-template  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
degree_mapper/: manage.py
degree_mapper/apps/common/: urls.py
degree_mapper/apps/common/templates/common/: index.html
degree_mapper/apps/nova/: apps.py  urls.py  views.py
degree_mapper/apps/nova/templates/nova/: index.html
degree_mapper/degree_mapper/: asgi.py  settings.py  urls.py  wsgi.py
degree_mapper/docs/: degree_mapper.rst  modules.rst
degree_mapper/docs/source/: conf.py  index.rst
