[tool.poetry]
name = "degree-mapper"
version = "0.1.0"
description = "Application that will alllow a student to review their credits against degrees in a specific college or university."
authors = ["Ansatz Analytics LLC"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
flake8 = "^7.0.0"
django-environ = "^0.11.2"
pyyaml = "^6.0.1"
docker = "^7.0.0"
compose = "^1.5.0"
sphinx = "^7.2.6"
furo = "^2024.1.29"
sphinx-tabs = "^3.4.5"
sphinx-copybutton = "^0.5.2"
sphinx-hoverxref = "^1.3.0"
readthedocs-sphinx-search = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
